--- a/app/src/main/res/layout/bottom_layout.xml
+++ b/app/src/main/res/layout/bottom_layout.xml
@@ -24,8 +24,9 @@
                 android:gravity="center_horizontal">
                 <ImageView
                     android:id="@+id/im_home"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:src="@mipmap/home1"/>
                 <TextView
                     android:id="@+id/txt_home"
                     android:layout_width="wrap_content"
