--- a/app/src/main/res/layout/tieshi.xml
+++ b/app/src/main/res/layout/tieshi.xml
@@ -19,10 +19,10 @@
     </LinearLayout>
 
 
-    <ScrollView
+    <HorizontalScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scrollbars="horizontal">
+        android:scrollbars="none">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -144,9 +144,13 @@
         </LinearLayout>
 
     </LinearLayout>
-    </ScrollView>
+    </HorizontalScrollView>
 
-
+    <TextView
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#9dc9c9c9"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
