基本能看的日期、睡眠时间的坐标表

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,7 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="TextPadding">8dp</dimen>
+    <dimen name="TextSizeSmall">12sp</dimen>
+    <dimen name="TextSizeNormal">15sp</dimen>
+    <dimen name="TextSizeBig">20sp</dimen>
+    <dimen name="TextSizeVeryBig">30sp</dimen>
 </resources>
