个人中心的一些修改

--- a/app/src/main/res/layout/mine.xml
+++ b/app/src/main/res/layout/mine.xml
@@ -34,101 +34,13 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/record"
+        <ListView
+            android:id="@+id/my_item_list"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            >
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="10dp"
-                android:layout_gravity="center_vertical"
-                android:src="@mipmap/chart"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_gravity="center_vertical"
-                android:text="睡眠记录"
-                android:textSize="16sp"/>
-            <ImageView
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:layout_marginLeft="200dp"
-                android:layout_gravity="center_vertical"
-                android:src="@mipmap/go"/>
-        </LinearLayout>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="#c4c4c4"/>
-        <LinearLayout
-            android:id="@+id/help"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            >
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="10dp"
-                android:layout_gravity="center_vertical"
-                android:src="@mipmap/help"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_gravity="center_vertical"
-                android:text="帮助睡眠"
-                android:textSize="16sp"/>
-            <ImageView
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:layout_marginLeft="200dp"
-                android:layout_gravity="center_vertical"
-                android:src="@mipmap/go"/>
-        </LinearLayout>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="#c4c4c4"/>
-        <LinearLayout
-            android:id="@+id/alarm"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            >
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="10dp"
-                android:layout_gravity="center_vertical"
-                android:src="@mipmap/alarm"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_gravity="center_vertical"
-                android:text="智能闹钟"
-                android:textSize="16sp"/>
-            <ImageView
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:layout_marginLeft="200dp"
-                android:layout_gravity="center_vertical"
-                android:src="@mipmap/go"/>
-        </LinearLayout>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="#c4c4c4"/>
+            android:layout_height="wrap_content"
+            android:divider="@null">
+
+        </ListView>
+
     </LinearLayout>
 </LinearLayout>
