--- a/app/src/main/res/layout/bottom_layout.xml
+++ b/app/src/main/res/layout/bottom_layout.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:background="#FFEEEEEE">
+    android:background="#5e6978">
 
     <LinearLayout
         android:layout_width="match_parent"
