--- a/app/src/main/res/layout/report.xml
+++ b/app/src/main/res/layout/report.xml
@@ -21,12 +21,16 @@
             android:text="睡眠效率:"/>
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
             <ProgressBar
                 android:id="@+id/efficiency_bar"
-                android:layout_width="200dp"
+                android:layout_width="280dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:layout_centerVertical="true"
+                android:progressDrawable="@drawable/totalbar"
+                style="@android:style/Widget.ProgressBar.Horizontal"
                 />
             <TextView
                 android:id="@+id/efficiency_text"
@@ -120,6 +124,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_centerVertical="true"
                 android:textSize="10sp"
+                android:textColor="#000000"
                 android:text="0 min"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -132,7 +137,9 @@
                 android:id="@+id/awake_bar"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="80dp"/>
+                android:layout_marginLeft="90dp"
+                android:layout_centerVertical="true"
+                style="@android:style/Widget.ProgressBar.Horizontal"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -145,7 +152,8 @@
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp">
             <Button
                 android:id="@+id/light_sleep_time"
                 android:layout_width="30dp"
@@ -155,6 +163,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
                 android:textSize="10sp"
+                android:textColor="#000000"
                 android:text="0 min"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -167,7 +176,9 @@
                 android:id="@+id/light_sleep_bar"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="80dp"/>
+                android:layout_centerVertical="true"
+                style="@android:style/Widget.ProgressBar.Horizontal"
+                android:layout_marginLeft="90dp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -180,7 +191,8 @@
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp">
             <Button
                 android:id="@+id/deep_sleep_time"
                 android:layout_width="30dp"
@@ -190,6 +202,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
                 android:textSize="10sp"
+                android:textColor="#000000"
                 android:text="0 min"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -202,7 +215,9 @@
                 android:id="@+id/deep_sleep_bar"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="80dp"/>
+                android:layout_centerVertical="true"
+                style="@android:style/Widget.ProgressBar.Horizontal"
+                android:layout_marginLeft="90dp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -226,11 +241,13 @@
             <Button
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
+                android:background="@drawable/button_back"
                 android:text="查看建议"/>
             <Button
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
+                android:background="@drawable/button_back"
                 android:text="睡眠记录"/>
         </LinearLayout>
     </LinearLayout>
