--- a/app/src/main/res/drawable/light_sleep_bar.xml
+++ b/app/src/main/res/drawable/light_sleep_bar.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- 背景  gradient是渐变,corners定义的是圆角 -->
     <item android:id="@android:id/background">
         <shape>
@@ -15,8 +14,8 @@
             <shape>
                 <corners android:radius="10dip" />
 
-                <solid android:color="#c74545" />
+                <solid android:color="#e1ca33" />
             </shape>
         </clip>
     </item>
-</layer-list>
+</selector>
