--- a/app/src/main/res/layout/report.xml
+++ b/app/src/main/res/layout/report.xml
@@ -25,11 +25,13 @@
             android:layout_marginTop="10dp">
             <ProgressBar
                 android:id="@+id/efficiency_bar"
-                android:layout_width="280dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/efficiency_text"
                 android:progressDrawable="@drawable/totalbar"
+                android:layout_marginRight="10dp"
                 style="@android:style/Widget.ProgressBar.Horizontal"
                 />
             <TextView
@@ -135,12 +137,16 @@
                 android:text="醒着:"/>
             <ProgressBar
                 android:id="@+id/awake_bar"
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="90dp"
                 android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/awake_text"
+                android:layout_marginRight="10dp"
+                android:progressDrawable="@drawable/totalbar"
                 style="@android:style/Widget.ProgressBar.Horizontal"/>
             <TextView
+                android:id="@+id/awake_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -174,12 +180,16 @@
                 android:text="浅睡:"/>
             <ProgressBar
                 android:id="@+id/light_sleep_bar"
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/light_sleep_text"
+                android:layout_marginRight="10dp"
+                android:progressDrawable="@drawable/light_sleep_bar"
                 style="@android:style/Widget.ProgressBar.Horizontal"
                 android:layout_marginLeft="90dp"/>
             <TextView
+                android:id="@+id/light_sleep_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -213,12 +223,16 @@
                 android:text="深睡:"/>
             <ProgressBar
                 android:id="@+id/deep_sleep_bar"
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/deep_sleep_text"
+                android:layout_marginRight="10dp"
+                android:progressDrawable="@drawable/deep_sleep_bar"
                 style="@android:style/Widget.ProgressBar.Horizontal"
                 android:layout_marginLeft="90dp"/>
             <TextView
+                android:id="@+id/deep_sleep_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
