闹钟，待完善

--- a/app/src/main/res/drawable/totalbar.xml
+++ b/app/src/main/res/drawable/totalbar.xml
@@ -15,7 +15,7 @@
             <shape>
                 <corners android:radius="10dip" />
 
-                <solid android:color="#c74545" />
+                <solid android:color="#49b96b" />
             </shape>
         </clip>
     </item>
