--- a/app/src/main/res/drawable/light_sleep_bar.xml
+++ b/app/src/main/res/drawable/light_sleep_bar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- 背景  gradient是渐变,corners定义的是圆角 -->
     <item android:id="@android:id/background">
         <shape>
@@ -18,4 +18,4 @@
             </shape>
         </clip>
     </item>
-</selector>
+</layer-list>
