--- a/app/src/main/res/layout/mine.xml
+++ b/app/src/main/res/layout/mine.xml
@@ -29,7 +29,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:background="#e9c6c4c4"/>
+        android:background="#c4c4c4"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
