--- a/app/src/main/res/layout/tieshi.xml
+++ b/app/src/main/res/layout/tieshi.xml
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="#f4eaea">
+        android:background="#00000000">
     <LinearLayout
         android:id="@+id/l_habit"
         android:layout_width="wrap_content"
