--- a/app/src/main/res/layout/report.xml
+++ b/app/src/main/res/layout/report.xml
@@ -26,7 +26,7 @@
             <ProgressBar
                 android:id="@+id/efficiency_bar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="6dp"
                 android:layout_marginLeft="10dp"
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/efficiency_text"
@@ -81,7 +81,7 @@
                     android:layout_height="30dp"
                     android:src="@mipmap/ic_values_duration"/>
                 <TextView
-                    android:id="@+id/sleep_time"
+                    android:id="@+id/awake_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#ffffff"
@@ -99,7 +99,7 @@
                     android:layout_height="30dp"
                     android:src="@mipmap/ic_fall_asleep"/>
                 <TextView
-                    android:id="@+id/awake_time"
+                    android:id="@+id/sleep_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -138,12 +138,12 @@
             <ProgressBar
                 android:id="@+id/awake_bar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="6dp"
                 android:layout_marginLeft="90dp"
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/awake_text"
                 android:layout_marginRight="10dp"
-                android:progressDrawable="@drawable/totalbar"
+                android:progressDrawable="@drawable/awake_bar"
                 style="@android:style/Widget.ProgressBar.Horizontal"/>
             <TextView
                 android:id="@+id/awake_text"
@@ -181,7 +181,7 @@
             <ProgressBar
                 android:id="@+id/light_sleep_bar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="6dp"
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/light_sleep_text"
                 android:layout_marginRight="10dp"
@@ -224,7 +224,7 @@
             <ProgressBar
                 android:id="@+id/deep_sleep_bar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="6dp"
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/deep_sleep_text"
                 android:layout_marginRight="10dp"
