--- a/app/src/main/res/layout/record_item.xml
+++ b/app/src/main/res/layout/record_item.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp">
+        android:layout_marginTop="5dp">
         <TextView
             android:id="@+id/date"
             android:layout_width="wrap_content"
@@ -37,10 +38,11 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="15dp"
             android:text="25%"/>
+
     </RelativeLayout>
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="1px"
+        android:layout_height="2px"
         android:layout_marginTop="10dp"
-        android:textColor="#a0a0a0"/>
+        android:textColor="#c4c4c4"/>
 </LinearLayout>
